--- a/estudiante/pom.xml
+++ b/estudiante/pom.xml
@@ -38,6 +38,12 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.25</version> <!-- Or the version you need -->
+        </dependency>
     </dependencies>
 
     <build>
